--- a/src/index.css
+++ b/src/index.css
@@ -269,7 +269,8 @@ input::placeholder{
     margin-right: 0 !important;
   }
   .login{
-    padding: 20px;
+    padding: 20px !important;
+    padding-bottom: 90px !important;
   }
   .floating-card{
     width: 280px !important;
