--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ input::placeholder{
   margin-top: 18%;
 }
 
-/* Vector */
+
 .vector {
   position: absolute;
   left: 8.33%;
@@ -117,7 +117,6 @@ input::placeholder{
 
 .card {
   position: relative;
-  /* make sure the overlay can spill out a bit */
   overflow: visible;           
   border-radius: 18px;      
 }
@@ -133,10 +132,10 @@ input::placeholder{
 .floating-card{
   position: absolute;
   left: 50%;
-  bottom: 20px;                
+  bottom: -15px;                
   transform: translateX(-50%);
   width: 90%;
-  max-width: 560px;           
+  max-width: 620px !important;           
   border-radius: 14px;
   background: #fff;
   box-shadow: 0 10px 28px rgba(0, 0, 0, 0.1);
@@ -228,6 +227,8 @@ input::placeholder{
   .hf-collapsible.open {
     max-height: 500px; 
     overflow: visible;
+    border-radius: 48px !important;
+    margin-top: 10px !important;
   }
 
   .search-bar{
@@ -274,7 +275,7 @@ input::placeholder{
   }
   .floating-card{
     width: 280px !important;
-    height: 150px !important;
+    height: 175px !important;
     box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1) !important;
     padding: 6px 10px !important;
   }
